SEO :  react helmer

--- a/GoShop/index.html
+++ b/GoShop/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>GoShop | minhnt2510 dev</title>
+    <meta
+      name="description"
+      content="GoShop là một trang web cơ bản được sử dụng bởi công cụ reactjs, phục vụ mục đích học tập và nhu cầu công việc"
+      data-react-helmet="true"
+    />
   </head>
   <body>
     <div id="root"></div>
